# airbnb-clone-backend

./: .gitignore  README.md  Url.md  pyproject.toml  render.yaml
bookings/: serializers.py
categories/: models.py  serializers.py  urls.py  views.py
config/: schema.py  settings.py  urls.py
experiences/: models.py  views.py
medias/: models.py  urls.py  views.py
reviews/: admin.py  models.py
rooms/: admin.py  models.py  schema.py  serializers.py  tests.py  types.py  urls.py  views.py
rooms/templates/: all_rooms.html  room_detail.html
users/: models.py  serializers.py  urls.py  views.py
